Alex: Fix picture not showing up in edit listing

--- a/src/components/EditListing/edit_listing.css
+++ b/src/components/EditListing/edit_listing.css
@@ -21,6 +21,15 @@
     resize: vertical;
     width: 40px;
 }
+.listing-img{
+  width: 250px;
+  height: 250px;
+  display: flex;
+  border-radius: 50%;
+  margin: auto;
+  justify-content: center;
+  overflow: hidden;
+}
 
 
 #create-listing-button {
